fix css text-align, successfully tested on ff2/ie7

--- a/packages/webgui/config/style/geexbox/style.css
+++ b/packages/webgui/config/style/geexbox/style.css
@@ -74,6 +74,7 @@ a, a:visited, a:active {
 	margin-right: auto;
 	margin-top: 2px;
 	margin-bottom: 2px;
+	text-align: left;
 }
 
 #searchBox fieldset {
@@ -104,7 +105,7 @@ a, a:visited, a:active {
 	background-image: url("webmote/webmotebg.png");
 	width: 230px;
 	height: 347px;
-	text-align: center;
+	text-align: left;
 }
 
 #webmoteControlButtonPlay {
@@ -271,7 +272,7 @@ a, a:visited, a:active {
 	background-image: url("seekBar/seekbarbg.png");
 	width: 320px;
 	height: 30px;
-	text-align: center;
+	text-align: left;
 }
 
 #seekBarButtonPreviousTrack {
